# src/main/kotlin/com/wutsi/membership/manager/dto/Category.kt
@@ -1,0 +1,9 @@
+package com.wutsi.membership.manager.dto
+
+import kotlin.Long
+import kotlin.String
+
+public data class Category(
+    public val id: Long = 0,
+    public val title: String = ""
+)
