# src/main/kotlin/com/wutsi/membership/manager/dto/GetMemberResponse.kt
@@ -1,0 +1,5 @@
+package com.wutsi.membership.manager.dto
+
+public data class GetMemberResponse(
+    public val member: Member = Member()
+)
